...
        component={KeyScreen}
        options={{ tabBarButtonTestID: 'purrivacy.tab.key', title: 'Vault' }}
      />
      <Tab.Screen
        name="Encrypt"
        component={EncryptScreen}
        options={{ tabBarButtonTestID: 'purrivacy.tab.encrypt', title: 'Encrypt' }}
      />
      <Tab.Screen
        name="Decrypt"
        component={DecryptScreen}
        options={{ tabBarButtonTestID: 'purrivacy.tab.decrypt', title: 'Decrypt' }}
      />
...
